--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -13,6 +13,7 @@ body{
     display: grid;
     grid-template-columns: 7% 9.5% 42% 30.5% 11%;
     box-sizing: border-box;
+    border-bottom: .5px solid rgb(102, 135, 241);
 }
 
 #img{
@@ -59,13 +60,109 @@ body{
 #inp{
     width: 93%;
     height: 50%;
-    font-size: 17px;
+    font-size: 1.1vw;
     font-weight: 200;
     margin: 10px 0 0 1.5% ;
     outline: none;
     color: rgb(85, 85, 90);
     border: none;
     
+}
+
+
+
+#aiea{
+    display: grid;
+    grid-template-columns: 88% 12%;
+
+}
+
+#aieaText{
+    box-sizing: border-box;
+    font-size: 1.3vw;
+    color: white;
+    font-weight: 600;
+    padding: 45% 0 0 0;
+}
+
+#cart{
+    
+    display: grid;
+    
+    grid-template-columns: 36% 50%;
+}
+
+#cartText{
+    box-sizing: border-box;
+    font-size: 1.3vw;
+    color: white;
+    font-weight: 600;
+    padding: 30% 0 0 0;
+}
+
+#cartText:hover , #first>div:hover{
+    text-decoration: underline;
+
+}
+
+#navBar2{
+    width: 100%;
+    height: 40px;
+    background-color:rgb(0,70,190) ;
+    display: grid;
+    grid-template-columns: 56% 44%;
+}
+
+#first{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+}
+
+#first>div{
+    font-size: .8vw;
+    color: white;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 0 0 0;
+    
+}
+
+#holiday::after{
+    content: "⌵";
+    margin: -10px 0 0 2px;
+    
+}
+#more::after{
+    
+    content: "⌵";
+    margin: 0 0 0 3px;
+    
+}
+
+#secondC{
+    display: grid;
+    width: 70%;
+    height: 100%;
+    margin: 0 0 0 20%;
+    grid-template-columns: auto auto auto auto;
+}
+
+#secondC>div{
+    font-size: .8vw;
+    color: white;
+    /* text-align: right; */
+    box-sizing: border-box;
+    padding: 15px 0 0 0;
+    font-weight: 600;
+}
+
+#acc{
+    display:grid;
+    grid-template-columns: 20% auto;
+    grid-gap: 0px;
+}
+#accText{
+    margin: 0 0 0 -10px;
 }
 
 div{
