--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -175,18 +175,93 @@ div{
     display: none;
     width: 350px;
     position: absolute;
-    height: 650px;
+    height: 400px;
     background-color: white;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: 0 0 0 1.5%;
     overflow: scroll;
-    animation: 2s linear all ;
+    animation: .5s ease-in op ;
+}
+
+
+
+
+
+#menuBox::after{
+    
+     content: "";
+  position: absolute;
+  bottom: 99.9999%;
+  left: 45%;
+  margin-left: 0px;
+
+  border-width: 14px;
+ 
+  border-left: 15px;
+  border-right: 15px; 
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+  transform: rotateZ(180deg);
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+#searchRes{
+     display: none;
+    width: 300px;
+    position: absolute;
+    height: 300px;
+    background-color: white;
+    border: 1px solid black;
+    margin: 0 0 0 2%;
+    overflow: scroll;
+    animation: .5s ease-in op ;
+}
+
+#holidayPopUp{
+   display: none;
+    width: 300px;
+    position: absolute;
+    height: 300px;
+    background-color: white;
+    border: 1px solid black;
+    margin: 0 0 0 2%;
+    overflow: scroll;
+    animation: .5s ease-in op ;
+}
+
+
+#accountPopUp{
+   display: none;
+    width: 350px;
+    position: absolute;
+    height: 200px;
+    background-color: white;
+    border: 1px solid black;
+    margin: 0 0 0 62%;
+    overflow: scroll;
+    animation: .5s ease-in op ;
+}
+
+
+#savedItemsPopUp{
+   display: none;
+    width: 1000px;
+    position: absolute;
+    height: 370px;
+    background-color: white;
+    border: 1px solid black;
+    margin: 0 0 0 30%;
+    overflow: scroll;
+    animation: .5s ease-in op ;
 }
 @keyframes op{
-    0%{
+    from{
         opacity: 0;
     }
-    100%{
+    to{
         opacity: 1;
     }
 }
