--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -177,9 +177,9 @@ div{
     position: absolute;
     height: 400px;
     background-color: white;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     margin: 0 0 0 1.5%;
-    overflow: scroll;
+    /* overflow: scroll; */
     animation: .5s ease-in op ;
 }
 
@@ -187,20 +187,20 @@ div{
 
 
 
-#menuBox::after{
+#menuBox::before{
     
-     content: "";
+    content: "";
   position: absolute;
-  bottom: 99.9999%;
-  left: 45%;
+  bottom: 99.9%;
+  left: 38.5%;
   margin-left: 0px;
 
-  border-width: 14px;
+  border-width: 15px;
  
   border-left: 15px;
   border-right: 15px; 
   border-style: solid;
-  border-color: black transparent transparent transparent;
+  border-color: white transparent transparent transparent;
   transform: rotateZ(180deg);
 }
 
@@ -210,12 +210,12 @@ div{
 
 #searchRes{
      display: none;
-    width: 300px;
+    width: 595px;
     position: absolute;
-    height: 300px;
+    height: 400px;
     background-color: white;
-    border: 1px solid black;
-    margin: 0 0 0 2%;
+    /* border: 1px solid black; */
+    margin: -.7% 0 0 19.2%;
     overflow: scroll;
     animation: .5s ease-in op ;
 }
@@ -228,8 +228,25 @@ div{
     background-color: white;
     border: 1px solid black;
     margin: 0 0 0 2%;
-    overflow: scroll;
+    /* overflow: scroll; */
     animation: .5s ease-in op ;
+}
+
+#holidayPopUp::before{
+    
+    content: "";
+  position: absolute;
+  bottom: 99.9%;
+  left: 24%;
+  margin-left: 0px;
+
+  border-width: 10px;
+ 
+  border-left: 10px;
+  border-right: 10px; 
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+  transform: rotateZ(180deg);
 }
 
 
@@ -241,8 +258,25 @@ div{
     background-color: white;
     border: 1px solid black;
     margin: 0 0 0 62%;
-    overflow: scroll;
+    /* overflow: scroll; */
     animation: .5s ease-in op ;
+}
+
+#accountPopUp::before{
+    
+    content: "";
+  position: absolute;
+  bottom: 99.9%;
+  left: 31.8%;
+  margin-left: 0px;
+
+  border-width: 10px;
+ 
+  border-left: 10px;
+  border-right: 10px; 
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+  transform: rotateZ(180deg);
 }
 
 
@@ -254,7 +288,7 @@ div{
     background-color: white;
     border: 1px solid black;
     margin: 0 0 0 30%;
-    overflow: scroll;
+    /* overflow: scroll; */
     animation: .5s ease-in op ;
 }
 @keyframes op{
@@ -265,3 +299,22 @@ div{
         opacity: 1;
     }
 }
+
+
+#savedItemsPopUp::before{
+    
+    content: "";
+  position: absolute;
+  bottom: 99.9%;
+  left: 96.4%;
+  margin-left: 0px;
+
+  border-width: 10px;
+ 
+  border-left: 10px;
+  border-right: 10px; 
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+  transform: rotateZ(180deg);
+}
+
