--- a/Styles/productPage.css
+++ b/Styles/productPage.css
@@ -465,6 +465,110 @@ div{
 /* navBar */
 
 #bigDiv{
-    
+
+    width: 100%;
+    border-top: 1px solid rgb(224,230,239);
+    margin: 30px auto auto auto;
 }
 
+
+#insideBox{
+    width: 98%;
+    margin: auto auto auto auto;
+
+}
+
+
+#timeLine{
+    width: 15%;
+    /* height: 10px; */
+    font-size: .75vw;
+    display: grid;
+    margin-top:.5% ;
+    grid-template-columns: 27% 10% 40%;
+}
+
+#bb{
+    margin: 8% 0 0 0 ;
+    color: #0046BE;
+}
+
+#bb:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#c{
+    margin: 5.5% 0 0 2% ;
+
+}
+
+#cont{
+    width: 100%;
+    height: 900px;
+
+}
+
+#topText{
+    font-size: 1.4vw;
+    font-weight: 600;
+    margin: 1.2% 0 0 0 ;
+}
+
+#mainCont{
+
+    width: 100%;
+    height: 800px;
+    margin: 1.2% 0 0 0;
+    display: grid;
+    grid-template-columns: 23% 77%;
+}
+
+#sortDiv{
+    border: 1px solid rgb(197,203,213);
+    overflow: scroll;
+    height: 600px;
+}
+
+
+#allSortDiv{
+    width: 91%;
+    margin: 5% auto auto 4%;
+    height: 500px;
+}
+
+#bord{
+     border-bottom: 1px solid rgb(197,203,213);
+}
+
+#gText{
+    font-size: 1.1vw;
+    font-weight: 600;
+
+}
+#sText{
+    font-size: .78vw;
+    margin-top: 2%;
+}
+#col{
+    color: #0046BE;
+}
+
+#sameD{
+    display: grid;
+    grid-template-columns: 8% 80%;
+    margin: 3% 0 0 0;
+}
+
+#sameT{
+    font-size: .78vw;
+    box-sizing: border-box;
+    padding-top: 1% ;
+    padding-bottom: 10%;
+   
+}
+
+
+div{
+    /* border: .2px solid black; */
+}
