--- a/Styles/productPage.css
+++ b/Styles/productPage.css
@@ -803,6 +803,57 @@ color: #1D252C;
     /* color: rgb(0,70,190); */
     margin-top:0% ;
 }
+
+#cart{
+    font-size: 1.2vw;
+    font-weight: 600;
+    /* box-sizing: ; */
+}
+
+#nextPages{
+    width: 100%;
+    height: 18px;
+    display: grid;
+    grid-template-columns: 20% 30%;
+    margin-top: 3%;
+    grid-gap: 55%;
+}
+
+#nextPages>div:nth-child(1){
+    font-size: .8vw;
+    /* margin: 2% 0 0 0 ; */
+}
+
+#nPages{
+    display: grid;
+    grid-template-columns:auto auto auto 
+     auto auto auto auto ;
+    
+    width: 60%;
+}
+
+#farrw{
+    font-size: 1.3vw;
+    color: rgb(200,206,215);
+}
+#barrw{
+    font-size: 1.3vw;
+    color: rgb(16,82,194);
+}
+.nu1{
+    font-size: .8vw;
+    /* color: rgb(0,70,190); */
+    font-weight: 600;
+    margin-top: 10%;
+}
+
+.nu{
+    font-size: .8vw;
+    color: rgb(0,70,190);
+    font-weight: 600;
+    margin-top: 10%;
+}
+
 div{
     /* border: .2px solid black; */
 }
