--- a/Styles/productDescPage.css
+++ b/Styles/productDescPage.css
@@ -463,3 +463,289 @@ div{
 }
 
 /* navBar */
+
+
+#bigDiv{
+    margin-top: 2.2%;
+    border-top: 1px solid rgb(197,203,213);
+}
+
+#inDiv{
+    margin: .8% 0 0 1%;
+    height: 700px;
+    display: grid;
+    grid-template-columns: 50% 25% 25%;
+}
+
+
+#timeLine{
+    width: 100%;
+    /* height: 10px; */
+    font-size: .75vw;
+    display: grid;
+    margin-top:0% ;
+    grid-template-columns: 6.5% 3.5% 10% 3.5% 6.5% 3.5% 62%;
+} 
+
+#bb{
+    margin: 8% 0 0 0 ;
+    color: #0046BE;
+}
+
+#bb:hover{
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(0,30,115)
+}
+
+.c{
+    margin: 5.5% 0 0 0 ;
+color: #0046BE;
+}
+.c:hover{
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(0,30,115);
+}
+.c1:hover{
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(0,30,115)
+}
+.c1{
+    margin: 8% 0 0 0 ;
+color: #0046BE;
+}
+#name{
+    margin-top: .8%;
+}
+
+#brandNmDiv{
+    margin-top: 1.5%;
+    color: rgb(4,87,200);
+    font-weight: 600;
+    font-size: 1.1vw;
+}
+
+#prodName{
+    font-size: 1.2vw;
+    margin-top: .5%;
+}
+
+#modelDiv{
+    display: grid;
+    width: 50%;
+    margin-top: 1.5%;
+    grid-template-columns: 11% 30% 9% 30%;
+    font-size: .78vw;
+}
+.mC{
+    font-weight: 600;
+}
+
+#ratingDiv{
+    margin-top: 2%;
+    width: 60%;
+    display: grid;
+    grid-template-columns:31% 25% 35% ;
+}
+
+#ratingD{
+    display: grid;
+    grid-template-columns: 15% 85%;
+}
+
+#starD{
+    font-size: 1.2vw;
+    color: rgb(255,224,0);
+}
+
+#rat{
+    font-size: .95vw;
+    font-weight: 600;
+    color: rgb(0,70,190);
+    box-sizing: border-box;
+    padding-top: 10%;
+}
+
+#rev{
+    font-size: .8vw;
+    color: rgb(4,87,211);
+    cursor: pointer;
+}
+#rev:hover{
+    text-decoration: underline;
+    color: rgb(0,30,115);
+}
+
+.expRev{
+    font-size: .8vw;
+    color: rgb(4,87,211);
+    border-left: 1px solid rgb(197,203,213);
+    box-sizing: border-box;
+    padding: 3% 0 0 8%;
+    cursor: pointer;
+}
+.expRev:hover{
+    text-decoration: underline;
+    color: rgb(0,30,115);
+}
+
+#highlyR{
+    margin-top: 1%;
+    font-size: .8vw;
+}
+#colu{
+    color: rgb(4,87,211);
+    cursor: pointer;
+}
+
+#colu:hover{
+    text-decoration: underline;
+    color: rgb(0,30,115);
+}
+
+#iDiv{
+    margin: 5% 0 0 10%;
+}
+
+#inPDiv{
+    margin-right: 10%;
+    margin-top: 1.5%;
+}
+
+#share{
+    font-size: .8vw;
+    color: rgb(4,87,211);
+    font-weight: 300;
+    box-sizing: border-box;
+    padding-left: 78%;
+}
+
+#priceD{
+    
+    margin-top: 12%;
+    display: grid;
+    grid-template-columns: 50% 45%;
+}
+
+#priceDiv{
+    font-size: 1.8vw;
+    font-weight: 600;
+    color: rgb(29,37,44);
+}
+
+#pD{
+   
+}
+
+#Sav{
+     display: grid;
+    grid-template-columns: 45% 50%;
+}
+
+#Sav{
+    font-size: .8vw;
+    margin-top: 2%;
+}
+
+#sav{
+    height: 23px;
+    font-weight: 600;
+    background-color: rgb(187,6,40);
+    color: white;
+    box-sizing: border-box;
+    padding: 5% 0 0 10%;
+}
+#Was{
+    box-sizing: border-box;
+    padding: 5% 0 0 4%;
+}
+
+#instDiv{
+    display: grid;
+    grid-template-columns: 10% 90%;
+}
+#or{
+    
+    font-size: .7vw;
+    
+}
+
+.st{
+    margin-left: 20%;
+}
+
+#instTextDiv{
+    margin-left: 6%;
+    margin-top: 4%;
+}
+
+#headInst{
+    font-size: 1.4vw;
+    font-weight: 600;
+}
+#smallT{
+    font-size: 1vw;
+}
+
+#sugg{
+    font-size: .7vw;
+    font-weight: 300;
+    margin-top: 1%;
+}
+#mon{
+    font-size: .7vw;
+    margin-top: 1.5%;
+    font-weight: 600;
+}
+
+#sho{
+    font-size: .7vw;
+    margin-top: 1.5%;
+    color: rgb(4,87,211);
+    font-weight: 600;
+
+
+}
+
+#sho:hover{
+    text-decoration: underline;
+    color: rgb(0,30,115);
+    cursor: pointer;
+}
+
+#extHDiv{
+    margin-top: 3%;
+    width: 99%;
+    height: 70px;
+    
+    background-color: rgb(240,242,244);
+}
+
+#extDiv{
+    width: 89%;
+    margin: 4% 0 0 4%;
+    box-sizing: border-box;
+    padding-top: 5%;
+    display: grid;
+    grid-template-columns:10% 90% ;
+}
+#exc{
+    box-sizing: border-box;
+    padding-top: 30%;
+    font-size: 1.3vw;
+}
+.exT{
+    font-size: .65vw;
+    margin-top: .5%;
+}
+
+#exHed{
+    font-size: .7vw;
+    font-weight: 600;
+}
+
+div{
+    /* border: 1px solid black; */
+}
