--- a/Styles/productDescPage.css
+++ b/Styles/productDescPage.css
@@ -472,7 +472,7 @@ div{
 
 #inDiv{
     margin: .8% 0 0 1%;
-    height: 700px;
+    height: 900px;
     display: grid;
     grid-template-columns: 50% 25% 25%;
 }
@@ -614,6 +614,13 @@ color: #0046BE;
 #inPDiv{
     margin-right: 10%;
     margin-top: 1.5%;
+    
+
+}
+
+#scrol{
+    height: 500px;
+    overflow: scroll;
 }
 
 #share{
@@ -622,11 +629,12 @@ color: #0046BE;
     font-weight: 300;
     box-sizing: border-box;
     padding-left: 78%;
+    padding-bottom: 12%;
 }
 
 #priceD{
     
-    margin-top: 12%;
+    /* margin-top: 12%; */
     display: grid;
     grid-template-columns: 50% 45%;
 }
@@ -835,6 +843,114 @@ color: #0046BE;
     margin-left: 30%;
 }
 
+#addDiv{
+    margin-top: 8%;
+}
+
+#addCartBtn{
+    height: 40px;
+    display: grid;
+    grid-template-columns: 40% 50%;
+    border-radius: 5px;
+    background-color: rgb(255,224,0);
+    transition: .2s linear;
+}
+
+#addCartBtn:hover{
+    background-color: rgb(250, 227, 52);
+    cursor: pointer;
+}
+
+
+#cartS{
+    font-size: 1.2vw;
+    font-weight: 600;
+    margin: 8% 0 0 85%;
+}
+
+#cartT{
+    font-size: .85vw;
+    font-weight: 600;
+    margin: 8% 0 0 2% ;
+}
+#bundel{
+    margin-top: 5%;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+    font-size: .9vw;
+    text-align: center;
+    box-sizing: border-box;
+    padding-top: 3.5%;
+    background-color: rgb(0,70,190);
+    transition: .2s linear;
+
+
+}
+#bundel:hover{
+background-color: rgb(0,30,115);
+cursor: pointer;
+}
+
+
+
+#summDiv{
+    border-left: 1px solid rgb(197,203,213);
+}
+
+#inSumDiv{
+    margin: 2% 0 0 3% ;
+}
+
+#peopleBuy{
+    list-style: none;
+    box-sizing: border-box;
+    padding-bottom: 4%;
+    
+    border-bottom: 1px solid rgb(197,203,213);
+    font-size: 1.2vw;
+    font-weight: 600;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+#peopleBuy>div:nth-child(1){
+    padding-top: 1.2%;
+}
+
+.peopleBuy1>div:nth-child(1){
+    padding-top: 5%;
+}
+
+.peopleBuy1{
+    list-style: none;
+    box-sizing: border-box;
+    padding-bottom: 4%;
+    padding-top: 2%;
+    border-bottom: 1px solid rgb(197,203,213);
+    font-size: 1.2vw;
+    font-weight: 600;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+
+#exp{
+    margin: 0% 0 0 25%;
+    box-sizing: border-box;
+    /* padding-top: 2%; */
+    font-size: 2vw;
+    
+}
+
+.exp1{
+    margin: 0% 0 0 25%;
+    box-sizing: border-box;
+    padding-top: 15%;
+    font-size: 2vw;
+    
+}
 
 
 
