--- a/Styles/productDescPage.css
+++ b/Styles/productDescPage.css
@@ -472,7 +472,7 @@ div{
 
 #inDiv{
     margin: .8% 0 0 1%;
-    height: 900px;
+    height: 600px;
     display: grid;
     grid-template-columns: 50% 25% 25%;
 }
@@ -619,7 +619,7 @@ color: #0046BE;
 }
 
 #scrol{
-    height: 500px;
+    height: 536px;
     overflow: scroll;
 }
 
@@ -801,6 +801,11 @@ color: #0046BE;
     margin-top: 6%;
     border-bottom: .2px solid rgb(197,203,213);
 }
+.linee{
+    margin-top: 6%;
+    /* border-bottom: .2px solid rgb(197,203,213); */
+}
+
 
 #antiV{
       display: none;
@@ -897,6 +902,7 @@ cursor: pointer;
 
 #summDiv{
     border-left: 1px solid rgb(197,203,213);
+    overflow: scroll;
 }
 
 #inSumDiv{
@@ -1034,6 +1040,25 @@ border-bottom: 1px solid rgb(197,203,213);
     box-sizing: border-box;
     padding-top: 5%;
 }
+
+
+#specDiv{
+    width: 100%;
+    height: 700px;
+    margin-top: 2%;
+    margin-left: 2%;
+}
+
+#hedSpe{
+    font-size: 2vw;
+    font-weight: 600;
+}
+#l{
+    margin-top: -.1%;
+}
+
 div{
     /* border: 1px solid black; */
 }
+
+
