--- a/Styles/productDescPage.css
+++ b/Styles/productDescPage.css
@@ -1043,18 +1043,56 @@ border-bottom: 1px solid rgb(197,203,213);
 
 
 #specDiv{
-    width: 100%;
-    height: 700px;
+    width: 60%;
+
+    /* height: 500px; */
     margin-top: 2%;
     margin-left: 2%;
 }
+#empty{
+    height: 500px;
+}
 
 #hedSpe{
-    font-size: 2vw;
+    font-size: 1.8vw;
     font-weight: 600;
+    box-sizing: border-box;
+    padding-bottom: 1%;
+    border-bottom: 1px solid rgb(197,203,213);
 }
 #l{
     margin-top: -.1%;
+}
+
+#noT{
+    list-style: none;
+border-top: 1px solid rgb(197,203,213);
+}
+#fKS{
+    display: grid;
+    grid-template-columns: 90% 10%;
+border-top: 1px solid rgb(197,203,213);
+}
+
+.SD{
+    font-size: 1.2vw;
+    font-weight: 600;
+    /* margin-top: 1%; */
+    box-sizing: border-box;
+    /* padding-top: 1%; */
+    /* padding-bottom: 1%; */
+    padding-left: 1%;
+    /* background-color: rgb(243, 244, 247); */
+    /*  */
+}
+.KS{
+    box-sizing: border-box;
+    padding-top: 1.4%;
+}
+.Sexp{
+    font-size: 2.5vw;
+    padding-top: 5%;
+    box-sizing: border-box;
 }
 
 div{
