done upTo sort By price Range F

--- a/Styles/checkoutPage.css
+++ b/Styles/checkoutPage.css
@@ -302,6 +302,11 @@ margin: 5% 0 0 8%;
 
 }
 
+#NowAppProdH{
+    height: 433px;
+    overflow: scroll;
+}
+
 #NowAppProdH>div>div:nth-child(1)>div:nth-child(2){
     /* border: 1px solid black; */
     color:rgb(0,70,190) ;
