--- a/Styles/productPage.css
+++ b/Styles/productPage.css
@@ -589,11 +589,15 @@ color: #1D252C;
     color: #1D252C;
 }
 
+input{
+    cursor: pointer;
+}
 
 .fDiv{
     display: grid;
     grid-template-columns: 8% 80%;
     padding-bottom: 2%;
+    
 }
 
 
